# Planner

./: README.md  planner_database.sql  planner_database_2.sql
.github/workflows/: rust.yml
src/: .env  Cargo.toml
src/src/: lib.rs  main.rs
src/src/engine/: mod.rs
src/src/engine/db_wrapper/: event.rs  mod.rs  schedule.rs  user.rs
src/src/interface/: mod.rs
src/src/interface/GUI/: mod.rs
src/src/transport/: mod.rs
src/tests/: engine_interface_tests.rs  event_tests.rs  user_tests.rs
