[package]
name = "planner"
version = "0.1.0"
authors = [
    "Adam Boguszewski <ab417730@students.mimuw.edu.pl>",
    "Maciej Herdon <mh418267@students.mimuw.edu.pl",
    "Wojciech Przytuła <wp418383@students.mimuw.edu.pl>",
    "Rafał Szulc <rs418393@students.mimuw.edu.pl>"
]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3.13"
chrono = "0.4.19"
regex = "1"
djangohashers = "1.4.1"
orbtk = "0.2.31"
sdl2 = "0.34"